keep addstep popup from sticking to right edge of window and scroll overflowing params. fixes #13212
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/gus/WDK/trunk@12227 4235af6a-31f9-0310-9ad3-ecf6348f2534

--- a/View/webapp/wdk/css/Strategy.css
+++ b/View/webapp/wdk/css/Strategy.css
@@ -680,9 +680,8 @@ b.strat_help_title > span {
 /*	right:140px; affects colocation */
 	left:140px; 
 	top:140px;
-  min-width:80%;
-/* 	min-width: 600px; 
-	max-width: 78%;  */
+	min-width: 600px; 
+	max-width: 78%; 
 	background-color: #FFFFFF;
 	background-repeat: repeat-x;
 	background-position: 0 26px;  
@@ -843,6 +842,7 @@ b.strat_help_title > span {
 }
 
 .filter.params {
+  overflow-x: auto;
 }
 
 .filter.operators {
